Fix footer on static pages
The footer was overflowing beyond its container due to the restrictions on the height property on the body element - setting the height to auto seems to resolve the issue. The same issue existed on the landing page so I initially added the .app-landing-page-layout class to the body element on static pages, which seemed to work well, but it didn't feel quite right to add the landing page layout class to pages that weren't the landing page, so I added an .app-static-page-layout class instead. Happy to discuss.

--- a/app/assets/stylesheets/_overrides.scss
+++ b/app/assets/stylesheets/_overrides.scss
@@ -4,9 +4,10 @@
 }
 
 // Usually, we restrict the height of the viewport however this was causing issues on
-// the landing page where the footer's grey background was extending beyond its boundary.
-// Therefore, we don't restrict the height on the landing page and instead set it to auto.
-.govuk-template__body.app-landing-page-layout {
+// the landing page and static pages (e.g. about page) where the footer's grey background was 
+// extending beyond its boundary. Therefore, we don't restrict the height on these pages 
+// and instead set it to auto.
+.govuk-template__body.app-landing-page-layout, .govuk-template__body.app-static-page-layout {
   height: auto;
 }
 
